--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ plugins {
 
 apply plugin: 'com.bmuschko.nexus'
 
-group 'com.montesinnos'
-version '0.1.0'
+group 'com.rivdata'
+version '0.2.0'
 
 sourceCompatibility = 1.8
 
